dark mode and target blank

--- a/resources/less/forum.less
+++ b/resources/less/forum.less
@@ -32,3 +32,8 @@ a.titleFeed::before {
   vertical-align: middle;
   font-weight: 900;
 }
+body when (@config-dark-mode = true) {
+  .feed-container {
+    background: #1a212a;
+  }
+}
